@@ -2,8 +2,12 @@ installr 0.9.1 (2013-03-30)
 ---------------------------
 
 UPDATED FUNCTIONS:
-   * install.pandoc - fixed it to work with the new URL scheme they've chosen for their site (they moved to MSI instead of .EXE about two weeks ago...)
    * install.URL - updated the error massage to explain better what (probably) went wrong.  And engorage the users to e-mail me with bug reports.
+   * add.installr.GUI - made sure the function wouldn't add items if "Update" is already present. e.g: made a fail-safe machanism in case the function installr:::add.installr.GUI() is run more than once (my thanks goes to Dieter Menne for the suggestion)
+
+BUG FIXES:
+   * install.pandoc - fixed it to work with the new URL scheme they've chosen for their site (they moved to MSI instead of .EXE about two weeks ago...)
+   * updateR - fixed a type in the installation massage (thanks to Henrik Pärn)
 
 OTHER NOTES:
    * Fixed wrongly used capital letters (for example, in the NEWS file)
